# lz4bsdiff

./: .gitignore  CMakeLists.txt  LICENSE  README.md  lz4bsdiff.cpp  lz4bsdiff.h  lz4bsdiffmain.cpp  lz4bspatch.c  lz4bspatch.h  lz4bspatchmain.cpp
bsdiff/: bsdiff.h  bspatch.c  bspatch.h
lz4/lib/: lz4.c  lz4.h
test/: testmain.cpp
